minor fixes, mainly to add ui2 (grid visible and fixed, delete option working)

--- a/src/app/add-ui2/add-ui2.page.scss
+++ b/src/app/add-ui2/add-ui2.page.scss
@@ -4,11 +4,25 @@
     background-color: rgb(219, 210, 210);
 }
 
+.delete-area {
+    border: 2px dashed var(--ion-color-medium) !important;
+    height: 40px;
+    margin: 2%;
+    width: 96%;
+    ion-icon{
+      font-size: 33px;
+    }
+}
+
 .grid{
-    height: 100%;
+    height: 90%;
     display: flex;
     flex-flow: column;
 }
+.c{
+    border: 1px solid var(--ion-color-light);
+}
+
 ion-content {
     --overflow: hidden;
 }
