--- a/src/app/tab3/tab3.page.scss
+++ b/src/app/tab3/tab3.page.scss
@@ -10,12 +10,12 @@
 	margin: 5%;
 }
 .lgt{
-    width:100%;
+    width:94%;
+    margin:3%;
     --background: var(--ion-color-light);
     --color: var(--ion-color-danger);
 }
 
 .btn-footer {
-        width:90%;
-        margin:5%;
+
 }
